# openrouter2

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  lefthook.yml
.github/workflows/: ci.yml
examples/: blocking_chat.rs  per_request_key_override.rs  stored_key_chat.rs  transcribe_file.rs  workspace_members.rs
src/: async_client.rs  auth.rs  blocking_client.rs  client_routes.rs  error.rs  lib.rs  observability.rs  options.rs  retry.rs  routes.rs  spec.rs  streaming.rs  transport.rs  types.rs
