[package]
name = "openrouter2"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "A small async reqwest client for OpenRouter chat completions and generation cost lookup."
license = "MIT OR Apache-2.0"
repository = "https://github.com/idknerdyshit/openrouter2"
homepage = "https://github.com/idknerdyshit/openrouter2"
documentation = "https://docs.rs/openrouter2"
readme = "README.md"
keywords = ["openrouter", "llm", "ai", "async", "reqwest"]
categories = ["api-bindings", "asynchronous"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "form", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
dbg_macro = "deny"
todo = "warn"
