[package]
name = "openrouter2"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
description = "Typed async and blocking reqwest clients for the OpenRouter API."
license = "MIT OR Apache-2.0"
repository = "https://github.com/idknerdyshit/openrouter2"
homepage = "https://github.com/idknerdyshit/openrouter2"
documentation = "https://docs.rs/openrouter2"
readme = "README.md"
keywords = ["openrouter", "llm", "ai", "async", "reqwest"]
categories = ["api-bindings", "asynchronous"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[features]
default = ["async"]
async = ["dep:async-stream", "dep:futures-core", "dep:futures-util"]
blocking = ["reqwest/blocking"]

[dependencies]
async-stream = { version = "0.3", optional = true }
bytes = "1"
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
percent-encoding = "2"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "form", "multipart", "stream", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = { version = "0.1", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
allow_attributes_without_reason = "warn"
clone_on_ref_ptr = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
panic_in_result_fn = "warn"
print_stderr = "warn"
print_stdout = "warn"
result_large_err = "warn"
